--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "chip8-terminal"
+name = "chip8-core"
 version = "0.1.0"
 authors = ["LightDiscord <root@arnaud.sh>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-chip8 = { path = "../chip8-core" }
+[dependencies.rand]
+version = "0.7"
+features = ["getrandom", "wasm-bindgen"]
